# Copyright 2023 Lei Zhang
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "gitlab-bot"
version = "1.2.0"
description = ""
requires-python = ">=3.8"
dependencies = [
    "gidgetlab[aiohttp]>=1.0.0",
    "openai==0.27.10",
    "langchain==0.0.276"
]

[project.optional-dependencies]
lint = [
    "flake8==5.0.4",
    "pyproject-flake8==5.0.4",
    "isort>=5,<6",
    "black>=23,<24"
]
package = [
    "flit==3.9.0"
]

[tool.flake8]
max-line-length = 300
ignore = ['E231', 'E241', 'W291', 'W293', 'W503']
per-file-ignores = [
    '__init__.py:F401',
]
count = true

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except Exception as e:",
]
