# Copyright 2023 Lei Zhang
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gitlab-bot"
version = "1.2.1"
description = ""
authors = ["Lei Zhang <coolbeevip@gmail.com>"]
packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
gidgetlab = {version = "^1.1.0", extras = ["aiohttp"]}
langchain = "0.3.6"
langchain-openai = "0.2.5"
langchain_google_genai = "2.0.4"
python-dotenv = "1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
pytest = "7.4.3"
coverage = "7.2.7"
pytest-cov = "4.1.0"

[tool.ruff]
line-length = 79
fix = true
target-version = "py39"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
extend-select = [
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "PGH", # pygrep-hooks
    "RUF", # ruff
    "E",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except Exception as e:",
]
